@@ -1,18 +1,17 @@
 class Import::BaseController < ApplicationController
   private
 
-  def get_or_create_namespace
-    begin
-      namespace = Group.create!(name: @target_namespace, path: @target_namespace, owner: current_user)
-      namespace.add_owner(current_user)
-    rescue ActiveRecord::RecordNotUnique, ActiveRecord::RecordInvalid
-      namespace = Namespace.find_by_path_or_name(@target_namespace)
-      unless current_user.can?(:create_projects, namespace)
-        @already_been_taken = true
-        return false
-      end
-    end
+  def find_or_create_namespace(name, owner)
+    return current_user.namespace if name == owner
+    return current_user.namespace unless current_user.can_create_group?
 
-    namespace
+    begin
+      name = params[:target_namespace].presence || name
+      namespace = Group.create!(name: name, path: name, owner: current_user)
+      namespace.add_owner(current_user)
+      namespace
+    rescue ActiveRecord::RecordNotUnique, ActiveRecord::RecordInvalid
+      Namespace.find_by_path_or_name(name)
+    end
   end
 end
