@@ -11,6 +11,9 @@ v 8.11.4
   - Fix sorting issues by "last updated" doesn't work after import from GitHub
   - Creating an issue through our API now emails label subscribers !5720
   - Block concurrent updates for Pipeline
+  - Fix resolving conflicts on forks
+  - Fix diff commenting on merge requests created prior to 8.10
+  - Don't create groups for unallowed users when importing projects
   - Fix issue boards leak private label names and descriptions
 
 v 8.11.3
